# desktop

./: README.md  main.py  pyproject.toml
qml/: MainWindow.qml  main.qml
