[tool.poetry]
name = "beat-machine-desktop"
version = "0.1.0"
description = "Offline app for The Beat Machine"
authors = ["Your Name <you@example.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
PyQT5 = "^5.14.1"
beatmachine = { git = "https://github.com/beat-machine/beat-machine.git", branch = "develop" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
