[tool.poetry]
name = "tbm_desktop"
version = "0.1.0"
description = "Desktop version of TBM"
authors = ["branchpanic <branchpanic@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
PyQT5 = "^5.14.1"
beatmachine = "^3.1.5"

[tool.poetry.dev-dependencies]
pip-licenses = "^2.3.0"
rope = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
